--- a/templates/nsolid-quick-start/nsolid.jinja
+++ b/templates/nsolid-quick-start/nsolid.jinja
@@ -1,6 +1,6 @@
 {% import "path_utils.jinja" as path_utils with context %}
 
-{% set nsolidStorageImage = "https://www.googleapis.com/compute/v1/projects/nodesource-public/global/images/nsolid-platform-3-0-4-1516897505" %}
+{% set nsolidConsoleImage = "https://www.googleapis.com/compute/v1/projects/nodesource-public/global/images/nsolid-platform-3-0-4-1516897505" %}
 {% set nsolidRuntimeImage = "https://www.googleapis.com/compute/v1/projects/nodesource-public/global/images/nsolid-runtime-3-0-4-1516897527" %}
 
 {% set project = env["project"] %}
@@ -31,7 +31,7 @@ resources:
     type: vm_instance.py
     properties:
       instanceName: {{ consoleInstanceName }}
-      sourceImage: {{ nsolidStorageImage }}
+      sourceImage: {{ nsolidConsoleImage }}
       zone: {{ zone }}
       machineType: {{ machineType }}
       network: {{ network }}
